add MPIfR utility vexLSBtoUSB.py

--- a/sites/MPIfR/Makefile.am
+++ b/sites/MPIfR/Makefile.am
@@ -3,6 +3,7 @@ SUBDIRS = \
 	difxdb/difxarchive \
 	difxdb/difxexport \
 	difxdb/prepDifx \
+	geo \
 	GMVA \
 	misc/getObsFiles \
 	misc/datacheckers \
