script for executing mark6 specific commands through  mk5daemon

--- a/applications/mk5daemon/utils/Makefile.am
+++ b/applications/mk5daemon/utils/Makefile.am
@@ -3,4 +3,9 @@ dist_bin_SCRIPTS = \
 	listmodules \
 	listmedia \
 	mk5control \
+	mk6control.py \
 	killjob
+
+install-exec-hook:
+	mv $(DESTDIR)$(bindir)/mk6control.py $(DESTDIR)$(bindir)/mk6control
+
