--- a/libraries/codifio/utils/Makefile.am
+++ b/libraries/codifio/utils/Makefile.am
@@ -5,7 +5,7 @@ LDADD = \
 	$(top_builddir)/src/libcodifio.la
 
 bin_PROGRAMS = \
-	codifsum codif_write codifSplitChan fixcodif
+	codifsum codif_write codifSplitChan fixcodif codif_dsb2ssb
 
 codifsum_SOURCES = \
 	codifsum.c
@@ -16,6 +16,10 @@ codif_write_SOURCES = \
 codifSplitChan_SOURCES = \
 	codifSplitChan.c
 
-fix_codif_SOURCES = \
+fixcodif_SOURCES = \
 	fixcodif.c
+
+codif_dsb2ssb_SOURCES = \
+	codif_dsb2ssb.c
+
 
