--- a/libraries/vdifio/vlbi-vdifio.spec.in
+++ b/libraries/vdifio/vlbi-vdifio.spec.in
@@ -45,6 +45,7 @@ make
 %{_bindir}/extractVDIFThreads
 %{_bindir}/filterVDIF
 %{_bindir}/countVDIFPackets
+%{_bindir}/invalidateVDIFPackets
 %{_bindir}/printVDIF
 %{_bindir}/printVDIFheader
 %{_bindir}/searchVDIF
