--- a/mpifxcorr/utils/Makefile.am
+++ b/mpifxcorr/utils/Makefile.am
@@ -2,7 +2,7 @@ AM_CPPFLAGS = \
 	-I$(top_builddir)/src \
 	-I$(top_srcdir)/src
 
-bin_PROGRAMS = checkmpifxcorr dedisperse_difx mpispeed
+bin_PROGRAMS = checkmpifxcorr dedisperse_difx mpispeed mpiinittest
 
 dist_bin_SCRIPTS = \
 	genmachines.py \
@@ -18,6 +18,9 @@ checkmpifxcorr_SOURCES = \
 
 dedisperse_difx_SOURCES = \
 	dedisperse_difx.cpp
+
+mpiinittest_SOURCES = \
+	mpiinittest.cpp
 
 mpispeed_SOURCES = \
 	mpispeed.cpp
