fix compile issue for calcif2 and mark6meta

--- a/docker/CentOS8/Dockerfile
+++ b/docker/CentOS8/Dockerfile
@@ -15,6 +15,8 @@ RUN yum clean all && yum update -y \
     && yum install -y gcc \
     && yum install -y gcc-c++ \
     && yum install -y make \
+    && yum install -y libtirpc-devel \
+    && yum install -y systemd-devel \
     && yum install -y git \
     && yum install -y libX11-devel\
     && yum install -y gcc-gfortran\
